# pulse-echo-gui

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  PROJECT_INFO.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  run_gui.py  setup.py  validate_project.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: dependency-review.yml  publish.yml  tests.yml
docs/: README.md
docs/en/: PROJECT_INFO.md  QUICKSTART.md
docs/images/: README.md
examples/: README.md  basic_hahn_echo.py  pulse_shapes_comparison.py
pulseechogui/: __init__.py  i18n.py
pulseechogui/core/: __init__.py  spinecho.py  spinechoshaped.py
pulseechogui/gui/: PulseShapedSeq_gui.py  Spin_echo_2p_3p_gui.py  Spin_echo_2p_3p_single_core_gui.py  __init__.py
pulseechogui/locales/: README.md
tests/: README.md  __init__.py  conftest.py  test_installation.py  test_spinecho.py  test_spinechoshaped.py
