[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseechogui"
version = "1.0.0"
description = "GUI applications for NMR/ESR spin echo pulse sequence simulation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Sylvain Bertaina", email = "sylvain.bertaina@cnrs.fr"}
]
maintainers = [
    {name = "Sylvain Bertaina", email = "sylvain.bertaina@cnrs.fr"}
]
keywords = [
    "nmr",
    "esr",
    "epr",
    "spin-echo",
    "pulse-sequences",
    "quantum-simulation",
    "magnetic-resonance",
    "shaped-pulses",
    "gui",
    "tkinter",
    "quantum-mechanics",
    "density-matrix",
    "physics-simulation",
    "scientific-computing",
    "spin-dynamics",
    "wurst",
    "gaussian-pulse",
    "adiabatic-pulse"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: X11 Applications",
    "Natural Language :: English",
    "Framework :: Matplotlib",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "flake8-docstrings>=1.7",
    "flake8-bugbear>=23.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

# Testing dependencies
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

# Documentation dependencies
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
    "myst-parser>=1.0",
]

# Performance testing
benchmark = [
    "pytest-benchmark>=4.0",
]

# Code quality
quality = [
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "bandit>=1.7",
]

# All dependencies
all = [
    "pulseechogui[dev,test,docs,benchmark,quality]"
]

[project.scripts]
pulseechogui-basic = "pulseechogui.gui:launch_basic_gui"
pulseechogui-basic-single = "pulseechogui.gui:launch_basic_gui_single"
pulseechogui-shaped = "pulseechogui.gui:launch_shaped_pulse_gui"
pulseechogui-validate = "pulseechogui:validate_installation"

[project.urls]
Homepage = "https://github.com/sylvainbertaina/PulseSeq"
"Bug Reports" = "https://github.com/sylvainbertaina/PulseSeq/issues"
Source = "https://github.com/sylvainbertaina/PulseSeq"

[tool.setuptools.packages.find]
exclude = ["tests*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pulseechogui"]
known_third_party = ["numpy", "scipy", "matplotlib", "joblib", "tkinter"]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "joblib.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gui: marks tests that require GUI",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "physics: marks physics validation tests",
    "benchmark: marks benchmark tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["pulseechogui"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
